[tool.poetry]
name = "tad"
version = "0.1.0"
description = "Timeseries Anomaly Detection"
authors = [
    "Muhammad Saquib Sarfraz <muhammad_saquib.sarfraz@mercedes-benz.com> , Marios Koulakis <marios.koulakis@kit.edu>, Mei-Yen Chen <mei-yen.chen@mercedes-benz.com>, Lukas Layer <lukas.layer@mercedes-benz.com>, Lars Jaeger <lars.jaeger@mercedes-benz.com>"] 
license = "Proprietary"
maintainers = [
    "Muhammad Saquib Sarfraz <muhammad_saquib.sarfraz@mercedes-benz.com>, Marios Koulakis <marios.koulakis@kit.edu>, Mei-Yen Chen <mei-yen.chen@mercedes-benz.com>"]
readme = "README.md"
packages = [
    { include = "tad", from = "src" },
]


# --- declaring dependencies ---

[tool.poetry.dependencies]
python = "<3.12,>=3.9"
numpy = ">1.24,<=1.24.3" # 1.24.3 is the latest version that works with tensorflow 2.11
pandas = "^2.1.2"
plotly = "^5.18.0"
tqdm = "^4.66.1"
scikit-learn = "^1.3.2"
scipy = "^1.11.3"
tensorflow-io-gcs-filesystem = "^0.31.0" # has to be installed separately because tensorflow metadata is not consistent
tensorflow = "^2.11.0"
tensorflow-addons = "^0.22.0"
pyyaml = "^6.0.1"
typer = {extras = ["all"], version = "^0.9.0"}
pillow = "^10.1.0"
opencv-python = "^4.8.1.78"
matplotlib = "^3.8.2"
torch = "2.1.1"



[tool.poetry.group.dev] # Development dependencies for testing, formatting/ linting and building docs.
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ruff = "^0.1.1"
nox = "^2023.4.22"
pdoc = "^14.1.0"
pre-commit = "^3.6.0"


[tool.poetry.group.notebooks]
optional = true

[tool.poetry.group.notebooks.dependencies]
jupyterlab = "^4.0.9"


[tool.poetry.group.intel]
optional = true

[tool.poetry.group.intel.dependencies]
tensorflow-intel = [
    {platform = "win32", version = "2.15.0"},
    {platform = "linux", version = "2.14.0"}
]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- configure development tool chain ---

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --import-mode=importlib"
pythonpath = [
    "src"
]

testpaths = [
    "tests"
]


[tool.ruff]
# Include all Python files, including type stubs and Jupyter notebooks.
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]

[tool.ruff.lint]
ignore = [
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "ISC001",
    "ISC002"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
